--- a/configure.ac
+++ b/configure.ac
@@ -9,7 +9,7 @@ AC_LANG(C++)
 PKG_CHECK_MODULES([DEPS], [gsl])
 #AC_SUBST(DEPS_CFLAGS)
 #AC_SUBST(DEPS_LIBS)
-CPPFLAGS="$CPPFLAGS $DEPS_CFLAGS" 
+CPPFLAGS="$CPPFLAGS $DEPS_CFLAGS -std=c++11" 
 LIBS="$DEPS_LIBS $LIBS -lgsl -lgslcblas -lm -lgfortran" 
 
 AC_PREREQ([2.59])
